<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" 
    android:background="@color/grey_background">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    

    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="4dp"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="5dp" >
        
         <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical"
        android:weightSum="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_calls"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/et_totalcalls"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/productive_calls"
                android:textSize="@dimen/text_size_normal" />

            <EditText
                android:id="@+id/et_productivecalls"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                />
        </LinearLayout>
    </LinearLayout>
        
        
        </android.support.v7.widget.CardView>
    
   
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".5"
        android:background="#280000"
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="Reason"
        android:visibility="gone"
        android:weightSum="10" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:gravity="center"
           android:text="@string/total_calls"
            android:textColor="#ffffff"
            android:textSize="14sp" />

      

        <TextView
            android:id="@+id/spinner2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
             android:gravity="center"
            android:text="@string/productive_calls"
            android:textColor="#ffffff" />

      

        <!-- <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="2"
            android:paddingLeft="5dp"
           /> -->
    </LinearLayout>

  
  
  
    <ListView
        android:id="@+id/lvcalls"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.5"
         android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#918D8D"
        android:visibility="invisible" >
    </ListView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/save" />
        
      
        
    </RelativeLayout>
    
</LinearLayout>

       <com.cpm.keyboard.CustomKeyboardView
        android:id="@+id/keyboard_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:visibility="gone" />
    
</RelativeLayout>

